<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@color/color_bg_primary"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textZoom" />

        <EditText
            android:id="@+id/et_text_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="3"
            android:hint="@string/textZoom"
            android:inputType="number" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ly_boolean_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_settings_clear_cache"
            style="@style/buttonSmallNoMargin"
            android:text="@string/clearCache" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_settings_load_default"
            style="@style/buttonSmallNoMargin"
            android:text="@string/loadDefault" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_Settings_ok"
        style="@style/buttonSmallNoMargin"
        android:layout_width="match_parent"
        android:text="@string/ok" />
</LinearLayout>
